tests/lean/unknownTactic.lean.expected.out
unknownTactic.lean:1:41-2:7: error: unsolved goals
x : Nat
a✝ : x = x
⊢ x = x
unknownTactic.lean:3:2-3:8: error: unexpected identifier; expected command
---
unknownTactic.lean:8:20-8:24: error: unexpected identifier; expected '{' or tactic
unknownTactic.lean:8:18-8:20: error: unsolved goals
x : Nat
⊢ x = x
---
unknownTactic.lean:14:20-14:24: error: unexpected identifier; expected '{' or tactic
unknownTactic.lean:14:18-14:20: error: unsolved goals
x : Nat
⊢ x = x
